--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -31,4 +31,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: joicekelly/ScubaPHP:latest
+          tags: joicekelly/scubaphp:latest
